added information about strength and points and health scale, fixed errors

--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
 
 <body>
 	<h1>Игровое поле</h1>
+	<div class="game-stats">
+		<p class="score">Счет: <span class="score-value">0</span></p>
+		<p class="attack-power">Сила удара: <span class="power-value">1</span></p>
+	</div>
 	<div class="field-box">
 		<div class="field"></div>
 	</div>
